manifest/deployment-ap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stress
  template:
    metadata:
      labels:
        app: stress
    spec:
      containers:
      - name: webapp
        image: 200148130345.dkr.ecr.ap-northeast-2.amazonaws.com/stress:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "application"
        effect: "NoSchedule"
