manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: location
  template:
    metadata:
      labels:
        app: location
    spec:
      serviceAccountName: location-app
      containers:
      - name: webapp
        image: 200148130345.dkr.ecr.us-east-1.amazonaws.com/location:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "application"
        effect: "NoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unicorn
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unicorn
  template:
    metadata:
      labels:
        app: unicorn
    spec:
      serviceAccountName: unicorn-app
      containers:
      - name: webapp
        image: 200148130345.dkr.ecr.us-east-1.amazonaws.com/unicorn:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "application"
        effect: "NoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: token
  template:
    metadata:
      labels:
        app: token
    spec:
      serviceAccountName: token-app
      containers:
      - name: webapp
        image: 200148130345.dkr.ecr.us-east-1.amazonaws.com/token:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "application"
        effect: "NoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: status
  template:
    metadata:
      labels:
        app: status
    spec:
      containers:
      - name: webapp
        image: 200148130345.dkr.ecr.us-east-1.amazonaws.com/status:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "application"
        effect: "NoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stress
  template:
    metadata:
      labels:
        app: stress
    spec:
      containers:
      - name: webapp
        image: 200148130345.dkr.ecr.us-east-1.amazonaws.com/stress:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "application"
        effect: "NoSchedule"
---
