manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: location
  namespace: dev
spec:
  selector:
    app: location
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: stress
  namespace: dev
spec:
  selector:
    app: stress
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: status
  namespace: dev
spec:
  selector:
    app: status
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: token
  namespace: dev
spec:
  selector:
    app: token
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: unicorn
  namespace: dev
spec:
  selector:
    app: unicorn
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
